modification on code

--- a/index.html
+++ b/index.html
@@ -86,18 +86,18 @@
         <div class="project-list">
             <div class="card-container">
                 <h2 id="proHead">See My Works Which Will Amaze You!</h2>
-                <p style="font-size: 20px;"> We develop the best quality website that serves for the long-term. Well-documented, clean, easy and elegant interface helps any non-technical clients.</p>
+                <p style="font-size: 20px;"> I have worked on various project on various feilds llike ml and web and designing and some glance for my fronot end development is this Well-documented, clean, easy and elegant interface of my portfolio website loaded with modern ui and animation</p>
             </div>
             <div class="card-container">
                 <div class="card ">
-                    <a href="https://www.ijnrd.org/track.php?r_id=221592">
+                    <a href="https://www.ijnrd.org/track.php?r_id=221592" target="_blank">
                         <div class="card--display">
                             <i class="ri-survey-line"></i>
                             <h2>Published Research Paper</h2>
                         </div>
                         <div class="card--hover">
                             <h2 style="font-size: 25px;">Research Paper </h2>
-                            <p style="font-size: 20px;">Topic : INTEGRATED APPROACHES FOR EFFICIENT MULTI-MODAL BREAST CANCER DETECTION (mini-project)</p>
+                            <p style="font-size: 20px;">INTEGRATED APPROACHES FOR EFFICIENT MULTI-MODAL BREAST CANCER DETECTION (mini-project)</p>
                             <p class="link">Click to see project</p>
                         </div>
                     </a>
@@ -105,7 +105,7 @@
             </div>
             <div class="card-container">
                 <div class="card ">
-                    <a href="https://github.com/Anujj-Gupta/CodeClash-1.0">
+                    <a href="https://github.com/Anujj-Gupta/CodeClash-1.0" target="_blank">
                         <div class="card--display">
                             <i class="ri-code-s-slash-line"></i>
                             <h2>HackaThon Project</h2>
@@ -118,21 +118,36 @@
                     </a>
                 </div>
             </div>
-            <!-- <div class="card-container">
+            <div class="card-container">
                 <div class="card ">
-                    <a href="https://www.ijnrd.org/track.php?r_id=221592">
+                    <a href="https://www.figma.com/design/wtgG1abaAXr0C4Cqzq1uc9/Gaming-UI?node-id=0-1&t=oVUDTxUMWtnmzir2-1" target="_blank">
                         <div class="card--display">
                             <i class="ri-survey-line"></i>
-                            <h2>Published Research Paper</h2>
+                            <h2>Figma Designs</h2>
                         </div>
                         <div class="card--hover">
-                            <h2 style="font-size: 25px;">Research Paper</h2>
-                            <p style="font-size: 20px;">Topic : INTEGRATED APPROACHES FOR EFFICIENT MULTI-MODAL BREAST CANCER DETECTION</p>
-                            <p class="link">Click to see project</p>
+                            <h2 style="font-size: 25px;">UI/UX</h2>
+                            <p style="font-size: 20px;">Landing page for BMW, PS5, Harley DavidSon, and AI Chatbot UI</p>
+                            <p class="link">View figma file</p>
                         </div>
                     </a>
                 </div>
-            </div> -->
+            </div>
+            <div class="card-container">
+                <div class="card ">
+                    <a href="https://www.canva.com/design/DAGJrZSjIeY/rNHwmh1zdWhnuHaxj-3THA/view?utm_content=DAGJrZSjIeY&utm_campaign=designshare&utm_medium=link&utm_source=editor" target="_blank">
+                        <div class="card--display">
+                            <i class="ri-survey-line"></i>
+                            <h2>Graphic Designs</h2>
+                        </div>
+                        <div class="card--hover">
+                            <h2 style="font-size: 25px;">Branding</h2>
+                            <p style="font-size: 20px;">Branding poster for Coolberg</p>
+                            <p class="link">View file</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
         </div>
     </section>
 
