--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <div class="card ">
                     <a href="https://www.figma.com/design/wtgG1abaAXr0C4Cqzq1uc9/Gaming-UI?node-id=0-1&t=oVUDTxUMWtnmzir2-1" target="_blank">
                         <div class="card--display">
-                            <i class="ri-survey-line"></i>
+                            <i class="ri-slideshow-line"></i>
                             <h2>Figma Designs</h2>
                         </div>
                         <div class="card--hover">
@@ -137,7 +137,7 @@
                 <div class="card ">
                     <a href="https://www.canva.com/design/DAGJrZSjIeY/rNHwmh1zdWhnuHaxj-3THA/view?utm_content=DAGJrZSjIeY&utm_campaign=designshare&utm_medium=link&utm_source=editor" target="_blank">
                         <div class="card--display">
-                            <i class="ri-survey-line"></i>
+                            <i class="ri-brush-3-line"></i>
                             <h2>Graphic Designs</h2>
                         </div>
                         <div class="card--hover">
